// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createProject creates a project and passes in JSON-like project options 1`] = `
"const { javascript, typescript } = require("projen");
const project = new typescript.TypeScriptProject({
  defaultReleaseBranch: "main",
  eslint: true,
  eslintOptions: {"dirs":["src","test"],"prettier":true,"aliasMap":{"@src":"./src","@foo":"./src/foo"}},
  jest: true,
  name: "sample",
  packageManager: javascript.NodePackageManager.YARN,
  prettier: true,

  // deps: [],                /* Runtime dependencies of this module. */
  // description: undefined,  /* The description is just a string that helps people understand the purpose of the package. */
  // devDeps: [],             /* Build dependencies for this module. */
  // packageName: undefined,  /* The "name" in package.json. */
});
project.synth();"
`;

exports[`createProject creates a project from an external project type, if it's installed 1`] = `
"const { javascript } = require("projen");
const { CdklabsTypeScriptProject } = require("cdklabs-projen-project-types");
const project = new CdklabsTypeScriptProject({
  defaultReleaseBranch: "main",
  eslint: true,
  jest: true,
  name: "sample",
  packageManager: javascript.NodePackageManager.NPM,
  prettier: true,

  // deps: [],                /* Runtime dependencies of this module. */
  // description: undefined,  /* The description is just a string that helps people understand the purpose of the package. */
  // devDeps: [],             /* Build dependencies for this module. */
  // packageName: undefined,  /* The "name" in package.json. */
});
project.synth();"
`;

exports[`createProject creates a project in a directory 1`] = `
"const { javascript, typescript } = require("projen");
const project = new typescript.TypeScriptProject({
  defaultReleaseBranch: "main",
  eslint: true,
  jest: true,
  name: "sample",
  packageManager: javascript.NodePackageManager.YARN,
  prettier: true,

  // deps: [],                /* Runtime dependencies of this module. */
  // description: undefined,  /* The description is just a string that helps people understand the purpose of the package. */
  // devDeps: [],             /* Build dependencies for this module. */
  // packageName: undefined,  /* The "name" in package.json. */
});
project.synth();"
`;
